# TeleBotMemo

./: .dockerignore  .env.example  .gitignore  README.md  compose-dev.yaml  compose.yaml  dockerfile  pyproject.toml  pyproject2.toml  requirements.txt
app/: alembic.ini  check_db.py  congif.py  db_code.py  entrypoint.sh  lexicon.py  main.py  models.py  time_schedule.py
app/alembic/: env.py
app/alembic/versions/: 2023_11_12_21_02-189d5e6a0599_initial_migration.py  2023_11_13_14_17-a40f79cb30cf_date_format.py
app/core/: bot.py  config.py  decorators.py  dependencies.py  functions.py  lexicon.py  logger.py  menu.py
app/db/: db.py  postgres.py  redis_storage.py  shemas.py
app/handlers/: add_category.py  add_object.py  choose_category.py  del_object.py  final_state.py  learn.py  no_state_handler.py  training.py
app/models/: exeptions.py  filters.py  system.py
app/models2/: exeptions.py  filters.py  system.py
app/services/: add_service.py  base_service.py  category_service.py  csv_service.py  data_service.py  del_service.py  learning_service.py  user_service.py
db/: 01-init.sh  dockerfile  memo_bank.sql  script.sh
